Fix unreadable drive tree item when selected + right click

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -167,6 +167,10 @@
         .cptools {
             color: @cp_drive-selected-fg;
         }
+        &.cp-app-drive-element-active {
+            background: @cp_drive-selected-bg !important;
+            color: @cryptpad_text_col !important;
+        }
     }
 
     .cp-app-drive-element-selected-tmp {
